[gd_scene load_steps=2 format=3 uid="uid://dieu2w7b2qxlb"]

[ext_resource type="Script" path="res://Archivos/Generales/Cajas_Colision/Caja_Lesion.gd" id="1_im70w"]

[node name="Caja_Lesion" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_im70w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="Comenzar_Invencible" from="." to="." method="_on_comenzar_invencible"]
[connection signal="Terminar_Invencible" from="." to="." method="_on_terminar_invencible"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
